# groth16-wasm-webgpu

./: .gitignore  README.md  bench.sh  index.html  index.js  setup.sh
arkworks/: Cargo.toml  build.rs
arkworks/src/: circuit.rs  lib.rs  main.rs
arkworks/web/: index.html  index.js
arkworks/web/pkg/: package.json  zk_bench_arkworks.d.ts  zk_bench_arkworks.js  zk_bench_arkworks_bg.wasm  zk_bench_arkworks_bg.wasm.d.ts
gnark/: Makefile  go.mod  go.sum  main.go
gnark/cmd/gen-pk-dump/: main.go
gnark/cmd/witnessmaker/: main.go
gnark/serde/: serde.go
gnark/web/: Verifier.sol  assignment.json  index.html  proof.json  vk.json
gnark/webgpu/: index.html  wnark-bridge.js
gnark/webgpu/vectors/: bls12_377_ntt_domains.json  bls12_381_ntt_domains.json  bn254_ntt_domains.json
gnark/webgpu/wnark-dist/examples/src/: library_example.d.ts  library_example.d.ts.map  library_example.js
gnark/webgpu/wnark-dist/src/: index.d.ts  index.d.ts.map  index.js
gnark/webgpu/wnark-dist/src/curvegpu/: api.d.ts  api.d.ts.map  browser_utils.d.ts  browser_utils.d.ts.map  browser_utils.js  buffer_pool.d.ts  buffer_pool.d.ts.map  buffer_pool.js  context.d.ts  context.d.ts.map  context.js  convert.d.ts  convert.d.ts.map  convert.js  curves.d.ts  curves.d.ts.map  curves.js  encoding.d.ts  encoding.d.ts.map  encoding.js  errors.d.ts  errors.d.ts.map  errors.js  field_module.d.ts  field_module.d.ts.map  field_module.js  g1_module.d.ts  g1_module.d.ts.map  g1_module.js  g2_module.d.ts  g2_module.d.ts.map  g2_module.js  g2_msm_module.d.ts  g2_msm_module.d.ts.map  g2_msm_module.js  (+51 more)
snarkjs/: bench.sh  benchmark.sh  circuit.circom  package-lock.json  package.json  pnpm-lock.yaml  setup.sh
snarkjs/web/: index.html  index.js  snarkjs-browser.js
(+48 files in other folders)
