[package]
name = "zk-bench-arkworks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-std = "0.4"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
ark-sponge = "0.4.0-alpha"
rand = "0.8"
wasm-bindgen = "0.2"
